--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve": "cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon -q dist/index.js\"",
     "prestart": "npm run build",
     "start": "cross-env NODE_ENV=production node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register src/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -24,11 +24,16 @@
   "homepage": "https://github.com/Ad450/Rental-service-api#readme",
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.11.43",
     "@types/object-hash": "^2.2.1",
+    "chai": "^4.3.6",
     "concurrently": "^7.2.2",
+    "mocha": "^10.0.0",
     "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
@@ -46,7 +51,6 @@
     "log4js": "^6.6.0",
     "mongoose": "^6.4.4",
     "object-hash": "^3.0.0",
-    "rimraf": "^3.0.2",
-    "ts-node": "^10.8.2"
+    "rimraf": "^3.0.2"
   }
 }
