--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,10 @@
   "extends": "@tsconfig/node16/tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "types": ["node"],
+    "types": ["node", "mocha"],
     "typeRoots": [ "./node_modules/@types" ]
   },
   "include": ["src"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules",  "./src/tests/",]
 }
+
