--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve": "cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon -q dist/index.js\"",
     "prestart": "npm run build",
     "start": "cross-env NODE_ENV=production node dist/index.js",
-    "test": "mocha -r ts-node/register src/**/*.ts"
+    "test": "mocha -r ts-node/register test/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,7 @@
     "concurrently": "^7.2.2",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.19",
+    "ts-mockito": "^2.6.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
@@ -40,6 +41,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
@@ -47,6 +49,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "helmet": "^5.1.0",
+    "jest": "^28.1.3",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.6.0",
     "mongoose": "^6.4.4",
