--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "test": "mocha -r ts-node/register test/**/*.ts"
   },
-  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Ad450/Rental-service-api.git"
@@ -34,11 +33,13 @@
     "concurrently": "^7.2.2",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.19",
+    "prisma": "^4.2.1",
     "ts-mockito": "^2.6.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.2.1",
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
