--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: install depencies
       run: yarn 
-    - name: run unit test
-      run: yarn test
     - name: build docker file
       run: docker build . --file Dockerfile --tag rental:v1
+    - name: push to docker hub
+      run: docker push emmanuel450666/test-repo1:rental:v1
