--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,12 @@ jobs:
     - uses: actions/checkout@v3
     - name: install depencies
       run: yarn 
-    - name: build docker file
-      run: docker build . --file Dockerfile --tag rental:v1
-    - name: push to docker hub
-      run: docker push emmanuel450666/test-repo1:rental:v1
+    - uses: mr-smithers-excellent/docker-build-push@v5
+    - name: Build & push Docker image
+      with:
+        image: rental
+        tags: v1
+        registry: registry-url.io
+        dockerfile: Dockerfile.ci
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
