fixed 'uses' action error

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,10 +14,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
     - name: install depencies
       run: yarn 
+      
     - name: Build & push Docker image
-    - uses: mr-smithers-excellent/docker-build-push@v5
+      uses: mr-smithers-excellent/docker-build-push@v5
       with:
         image: rental
         tags: v1
